css/styles.css
@font-face {
  font-family: reactive-anchor;
  src: url(../fonts/ReactiveAnchor-L3L0n.ttf);
}

body {
  height: 100vh;
  display: flex;
  margin: 0;
}

.left-hero {
  height: 100vh;
  width: 35vw;
  position: relative;
  display: flex;
  flex-direction: column;
  margin: 0;
}

.hero-image {
  margin: 0;
  padding: 0;
  z-index: -1;
  overflow: hidden;
}

.logo {
  display: flex;
  position: absolute;
  top: 200px;
  justify-content: center;
  align-items: center;
  width: 35vw;
  background: rgba(0,0,0,.25);
}

#logo {
  height: 150px;
  width: auto;
  margin: 20px 0px;
}

#logo-text {
  font-family: "reactive-anchor";
  font-size: 5rem;
  color: #fff;
  margin: 10px;
}

#image-credit {
  position: absolute;
  bottom: 0;
  width: 35vw;
  text-align: center;
  color: #fff;
}

.main {
  max-width: 65vw;
  background-color: lightgray;
  padding: 25px;
}

